src/objects/Allocations_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the allocation of Opportunities into General Accounting Units.</description>
    <label>Allocations Settings</label>
    <fields>
        <fullName>Default_Allocations_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling Default Allocations creates an Allocation object for each Opportunity. This enables reporting on allocations to a default General Accounting Unit, but uses more data storage.</description>
        <inlineHelpText>Enabling Default Allocations creates an Allocation object for each Opportunity. This enables reporting on allocations to a default General Accounting Unit, but uses more data storage.</inlineHelpText>
        <label>Default Allocations Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <description>Holds the ID of the default General Accounting Unit for creation of default allocations or for the allocation of non allocated amounts.</description>
        <inlineHelpText>Holds the ID of the default General Accounting Unit for creation of default allocations or for the allocation of non allocated amounts.</inlineHelpText>
        <label>Default General Accounting Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Opp_RecTypes__c</fullName>
        <description>Opportunity Record Types to exclude from calculations of Allocations rollups.</description>
        <inlineHelpText>Opportunity Record Types to exclude from calculations of Allocations rollups.</inlineHelpText>
        <label>Excluded Opp RecTypes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Opp_Types__c</fullName>
        <description>Excluded Opportunity Types from Allocations rollups.</description>
        <inlineHelpText>Excluded Opportunity Types from Allocations rollups.</inlineHelpText>
        <label>Excluded Opp Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Allocations_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Allocations can be set at the Payment level. If selected, you can manually create Allocation records for each Payment, or let NPSP automatically create Payment Allocation records based on the related Opportunity Allocation settings.</description>
        <inlineHelpText>Indicates whether Allocations can be set at the Payment level. Only for use with Accounting Subledger. Contact your Salesforce Account Executive for more information.</inlineHelpText>
        <label>Payment Allocations Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rollup_N_Day_Value__c</fullName>
        <defaultValue>365</defaultValue>
        <description>This value affects the number of days to count for N Days Allocations rollup fields.</description>
        <inlineHelpText>This value affects the number of days to count for N Days Allocations rollup fields.</inlineHelpText>
        <label>Rollup N Day Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Fiscal_Year_for_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will cause Allocation rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year. NOTE: Custom Fiscal Year Settings are NOT supported.</description>
        <inlineHelpText>Checking this box will cause Allocation rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year. NOTE: Custom Fiscal Year Settings are NOT supported.</inlineHelpText>
        <label>Use Fiscal Year for Rollups</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>